Improve automation workflows and bump release to 1.4.0